@@ -1,4 +1,6 @@
 * Version 1.3.1 (unreleased)
+- Modified the variable names so that they do not conflict with 
+  generic and well known libraries .
 
 
 * Version 1.3.0 (released 2020-11-11)
